CSCI-1610-FinalProject_Davis/Sue - The Game 1.1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
E:\Programs\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
E:\Programs\Greenfoot\lib\extensions\greenfoot.jar;E:\Programs\Greenfoot\lib\bluejcore.jar;E:\Programs\Greenfoot\lib\bluejeditor.jar;E:\Programs\Greenfoot\lib\bluejext.jar;E:\Programs\Greenfoot\lib\AppleJavaExtensions.jar;E:\Programs\Greenfoot\lib\junit-4.8.2.jar;E:\Programs\Greenfoot\lib\bluej.jar;E:\Programs\Greenfoot\lib\commons-httpclient-3.1.jar;E:\Programs\Greenfoot\lib\commons-logging-api-1.1.2.jar;E:\Programs\Greenfoot\lib\commons-codec-1.3.jar;E:\Programs\Greenfoot\lib\jl1.0.1.jar;E:\Programs\Greenfoot\lib\opencsv-2.3.jar;C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1
-d
C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
E:\Programs\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\Doghouse.java
<---- end of javadoc command ---->
Loading source file C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\Doghouse.java...
C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\Doghouse.java:17: error: ')' expected
        if ( (isTouching(Sue.class) && (Green
                                             ^
C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\Doghouse.java:20: error: ')' expected
    }    
     ^
C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\Doghouse.java:22: error: illegal start of statement
C:\Users\ericrocksmyworld\Documents\GitHub\Sue-The-Game\Sue - The Game 1.1\Doghouse.java:21: error: reached end of file while parsing
}
 ^
4 errors
